# trefyranio

./: .gitignore  LICENSE  README.md  daily_update.sh  deploy.sh  deploy_hosting.py  make_og.py  make_valkrets_geo.py  pyproject.toml
ops/: launchd-daily.plist.example
src/trefyranio/: __init__.py  allocator.py  backtest.py  model.py  parties.py  ratings.py  simulate.py  valkrets.py  web_export.py
src/trefyranio/etl/: __init__.py  build_polls.py  build_results.py  scb_results.py  schema.py  swedish_polls.py
tests/: test_allocator.py  test_backtest.py  test_model.py  test_polls_etl.py  test_ratings.py  test_results.py  test_simulate.py
web/: astro.config.mjs  firebase.json  package-lock.json  package.json
web/public/: robots.txt  seat_draws.json
web/src/components/: CoalitionBuilder.astro  Hemicycle.astro  Hero.astro  HouseEffects.astro  Threshold.astro  TrendChart.astro  ValkretsMap.astro  ValkretsSeats.astro
web/src/data/: forecast.json  polls.json  seat_draws.json  trend.json  valkrets.json  valkrets_geo.json
web/src/layouts/: Base.astro
web/src/pages/: code.astro  fyraprocentssparren.astro  index.astro  koalitioner.astro  mandatkarta.astro  metod.astro  ordlista.astro  vem-blir-statsminister.astro
web/src/pages/parti/: [code].astro
web/src/styles/: global.css
